# tadv

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  test_env.yml
assets/: assumption_annotation.html
assets/draw/: diagrams.drawio
cadv_exploration/: dataset_download.py  pipeline.py
cadv_exploration/data_models/: __init__.py  constraints.py  validated_results.py
cadv_exploration/deequ/: __init__.py  _analyzing.py  _constraint_suggestion.py  _constraint_validation.py  _loading.py  _profiling.py
cadv_exploration/deequ_wrapper/: __init__.py  _constraint_suggestion.py  _constraint_validation.py  _loading.py  wrapper.py
cadv_exploration/dq_manager/: __init__.py  abstract_data_quality_manager.py
cadv_exploration/dspy/: _model.py
cadv_exploration/error_injection/: __init__.py  abstract_corruption.py  abstract_error_injection_manager.py  basis.py  categorical_value.py
cadv_exploration/inspector/: abstract_inspector_manager.py
cadv_exploration/llm/: _tasks.py
cadv_exploration/loader/: __init__.py  _csv.py  _py_file.py  file_loader.py
cadv_exploration/project_manager/: abstract.py
cadv_exploration/runtime_environments/: __init__.py  basis.py
cadv_exploration/utils/: __init__.py  _utils.py  data_class.py
data/: README.md
experiments/sandbox/: diff.html
scripts/notebooks/: constraint_diff.ipynb  diff.md  distribution_plots.ipynb  figure_out_python_inspect.ipynb
scripts/python/: profiling.py  run_deequ_dv.py  run_langchain_cadv.py  temp_for_debugging.py  utils.py
scripts/shell/: download_competition_dataset.sh
tadv/data_models/: __init__.py  constraints.py  validated_results.py
tadv/dq_manager/: __init__.py  abstract_data_quality_manager.py
tadv/error_injection/: abstract_error_injection_manager.py
tadv/loader/: __init__.py  _py_file.py
tests/: conftest.py  test_data_class.py  test_pipeline.py  test_utils.py
(+3297 files in other folders)
