[tool.poetry]
name = "cadv-exploration"
version = "0.1.0"
description = ""
authors = ["Hao Chen <hao.chen@tu-berlin.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.0"
jenga = "^0.0.1a1"
langchain = "^0.3.2"
dspy-ai = "^2.5.3"
pydeequ = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
