[tool.poetry]
name = "cadv-exploration"
version = "0.1.0"
description = ""
authors = ["Hao Chen <hao.chen@tu-berlin.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.0"
jenga = "^0.0.1a1"
langchain = "^0.3.2"
dspy-ai = "^2.5.3"
pydeequ = "^1.4.0"
kaggle = "^1.6.17"
nbconvert = "^7.16.4"
ipython = "^7.16"
pyspark = "^3.5.3"
langchain-openai = "^0.2.2"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
