[tool.poetry]
name = "tadv-exploration"
version = "0.1.0"
description = ""
authors = ["Hao Chen <hao.chen@tu-berlin.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
langchain = "^0.3.2"
dspy-ai = "^2.5.3"
pydeequ = "^1.4.0"
ipython = "^7.16"
pyspark = "^3.5.3"
langchain-openai = "^0.2.2"
pyyaml = "^6.0.2"
nbconvert = "^7.16.4"
scikit-learn = "^1.5.2"
oyaml = "^1.0"
matplotlib = "^3.9.2"
duckdb = "^1.1.3"
flask = "^3.1.0"
langchain-ollama = "^0.2.2"
kaggle = "^1.6.17"
seaborn = "^0.13.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.poetry.group.download]
optional = true

[tool.poetry.group.download.dependencies]
kaggle = "^1.6.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
